# AudioSerialPortTool

./: CMakeLists.txt  README.md
include/: MainWidget.h
modules/: CMakeLists.txt
modules/comm/: CommUdp.cpp  CommUdp.h
modules/views/: ViewLayout.cpp  ViewLayout.h
src/: MainWidget.cpp  main.cpp
